[gd_scene load_steps=9 format=3 uid="uid://creglxctmrhf"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_ify3f"]
[ext_resource type="Texture2D" uid="uid://b8vpgodpbwk27" path="res://assets/Yellow box 16.png" id="1_xrjdu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bbqlq"]
size = Vector2(16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_pf8o0"]
radius = 76.6696

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vg1rn"]

[sub_resource type="Theme" id="Theme_gtwfv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tkt5e"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j3kp4"]
bg_color = Color(0.878431, 0, 0, 1)

[node name="enemy" type="CharacterBody2D"]
scale = Vector2(3, 3)
script = ExtResource("1_ify3f")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_xrjdu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_bbqlq")

[node name="detection zone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection zone"]
shape = SubResource("CircleShape2D_pf8o0")

[node name="Hurtbox" type="Area2D" parent="."]
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_vg1rn")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -11.3333
offset_top = -27.6667
offset_right = 33.6667
offset_bottom = -0.666668
scale = Vector2(0.525, 0.525)
size_flags_stretch_ratio = 0.53
theme = SubResource("Theme_gtwfv")
theme_override_styles/background = SubResource("StyleBoxFlat_tkt5e")
theme_override_styles/fill = SubResource("StyleBoxFlat_j3kp4")
max_value = 8.0
step = 4.0

[node name="aggro_timer" type="Timer" parent="."]
wait_time = 1.8

[connection signal="body_entered" from="detection zone" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="detection zone" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="timeout" from="aggro_timer" to="." method="_on_aggro_timer_timeout"]
